# tictactoe_cli

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  README.md  compile_commands.json
cmake/: Config.cmake  GNUOptions.cmake  MSVCOptions.cmake  UnitTests.cmake
tictactoe_cli/: CMakeLists.txt  main.cpp  tictactoe_cli.cpp  tictactoe_cli.hpp
tictactoe_cli/src/: main.cpp  tictactoe_cli.cpp  tictactoe_cli.hpp
tictactoe_cli/tests/: fuzz_test.cpp
